<resources>
    <string name="app_name">Schmoeker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_feed_management">Manage Feeds</string>
    <string name="title_activity_edit_feed">Edit Feed</string>
    <string name="title_activity_settings">Settings</string>


    <string name="all_feeds">All Feeds</string>
    <string name="all_unread">All Unread</string>
    <string name="url">URL:</string>
    <string name="title">Title:</string>
    <string name="update_interval">Update Interval</string>
    <string name="feeds">Feeds</string>
    <string name="manage_feeds">Manage Feeds</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_feed">Add New Feed</string>
    <string name="save">Save</string>
    <string name="edit_feed">Edit</string>
    <string name="edit_feed_title">Edit Feed</string>
    <string name="delete_feed">Delete</string>
    <string name="sync">Synchronize</string>
    <string name="asdf">asdf</string>
    <string name="qwer">qwer</string>
    <string name="channel_name">Schmoeker_channel</string>
    <string name="channel_description">Schmoeker_channel_description</string>
    <string name="notifications_on">Receive Notifications</string>


    <string name="every_15_minutes">Every 15 minutes</string>
    <string name="every_1_hour">Every 1 hour</string>
    <string name="every_2_hour">Every 2 hours</string>
    <string name="every_4_hour">Every 4 hours</string>
    <string name="daily">Daily</string>
    <string-array name="interval_array_titles">
        <item>@string/every_15_minutes</item>
        <item>@string/every_1_hour</item>
        <item>@string/every_2_hour</item>
        <item>@string/every_4_hour</item>
        <item>@string/daily</item>
    </string-array>
    <string-array name="interval_array_values">
        <item>15</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>1440</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="feed_not_available">No Feed Available</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="url_hint">Paste your feed url here</string>
    <string name="title_hint">Name your feed</string>
    <string name="open_website">Open Website</string>


</resources>
