<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:orderInCategory="100">
        <item
            android:id="@+id/nav_all_feeds"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/all_feeds"
            android:orderInCategory="111"    />
        <item
            android:id="@+id/nav_all_unread"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/all_unread"
            android:orderInCategory="112"/>
    </group>

    <group android:id="@+id/menu_feeds" android:title="@string/feeds" android:checkableBehavior="single" android:orderInCategory="200">
    </group>

    <group android:checkableBehavior="single" android:orderInCategory="300">
            <item
                android:id="@+id/nav_manage_feeds"
                android:icon="@drawable/ic_rss_feed_black_24dp"
                android:title="@string/manage_feeds"
                android:orderInCategory="311"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"
                android:orderInCategory="312"/>
    </group>

</menu>
