<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schmoeker.EditFeedActivity">

    <include layout="@layout/toolbar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_feed_margin"
        android:columnCount="2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:text="@string/url" />
        <EditText
            android:id="@+id/edit_url"
            android:text="@string/url"
            android:layout_gravity="fill" />
        <TextView
            android:text="@string/title" />
        <EditText
            android:id="@+id/edit_title"
            android:text="@string/url" />
        <Button
            android:id="@+id/save_feed"
            android:text="@string/add_feed" />
    </GridLayout>
</android.support.design.widget.CoordinatorLayout>